# backend/app/openapi/specification.yaml
@@ -4,7 +4,7 @@ info:
   description: AI Wizard Backend API for intelligent assistance
   version: 0.1.0
 paths:
-  /users/users:
+  /users:
     post:
       tags:
       - users
@@ -12,7 +12,7 @@ paths:
       description: "Create a new user.\n\nArgs:\n    user: User creation data\n  \
         \  db: Database session\n    user_service: User service instance\n\nReturns:\n\
         \    Created user object"
-      operationId: create_user_users_users_post
+      operationId: create_user_users__post
       requestBody:
         content:
           application/json:
@@ -39,7 +39,7 @@ paths:
         httpMethod: POST
         timeoutInMillis: 30000
         connectionType: INTERNET
-  /users/users/me:
+  /users/me:
     get:
       tags:
       - users
@@ -47,7 +47,7 @@ paths:
       description: "Get current authenticated user.\n\nArgs:\n    current_user: Current\
         \ authenticated user\n    user_service: User service instance\n\nReturns:\n\
         \    Current user object"
-      operationId: read_users_me_users_users_me_get
+      operationId: read_users_me_users_me_get
       responses:
         '200':
           description: Successful Response
@@ -64,37 +64,6 @@ paths:
         httpMethod: POST
         timeoutInMillis: 30000
         connectionType: INTERNET
-    options:
-      summary: CORS support
-      description: Enable CORS by returning correct headers
-      responses:
-        '200':
-          description: Default response for CORS method
-          headers:
-            Access-Control-Allow-Origin:
-              schema:
-                type: string
-            Access-Control-Allow-Methods:
-              schema:
-                type: string
-            Access-Control-Allow-Headers:
-              schema:
-                type: string
-          content: {}
-      x-amazon-apigateway-integration:
-        type: mock
-        requestTemplates:
-          application/json: '{"statusCode": 200}'
-        responses:
-          default:
-            statusCode: '200'
-            responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
-            responseTemplates:
-              application/json: '{}'
-  /users/me:
     put:
       tags:
       - users
@@ -173,9 +142,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /users/me/profile:
@@ -291,9 +260,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /ai/set-api-key:
@@ -356,9 +325,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /ai/remove-api-key:
@@ -409,9 +378,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /ai/refine-requirements:
@@ -476,9 +445,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /ai/generate-code:
@@ -540,12 +509,12 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
-  /projects/:
+  /projects:
     get:
       tags:
       - projects
@@ -630,9 +599,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /projects/{project_id}:
@@ -727,9 +696,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /projects/{project_id}/ai-interactions:
@@ -838,9 +807,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /projects/{project_id}/ai-interactions/{interaction_id}:
@@ -910,9 +879,9 @@ paths:
           default:
             statusCode: '200'
             responseParameters:
-              method.response.header.Access-Control-Allow-Headers: Content-Type,Authorization,X-Amz-Date,X-Api-Key
-              method.response.header.Access-Control-Allow-Methods: '*'
-              method.response.header.Access-Control-Allow-Origin: '*'
+              method.response.header.Access-Control-Allow-Headers: "Content-Type,Authorization,X-Amz-Date,X-Api-Key"
+              method.response.header.Access-Control-Allow-Methods: "*"
+              method.response.header.Access-Control-Allow-Origin: "*"
             responseTemplates:
               application/json: '{}'
   /:
